fixed users and products, pending create

--- a/views/layouts/header.pug
+++ b/views/layouts/header.pug
@@ -17,6 +17,6 @@ html
             ul.navbar-nav
                 li.nav-item
                     if user
-                        a.nav-link=user.name
+                        a.nav-link=user.userName
         .container.mt-5    
             block header
