--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -2,14 +2,16 @@ extends ../layouts/header.pug
 block header
     h1 Login
 
+    h4 User name: admin, password: admin
+
     if errors
         each error in errors
             .alert.alert-danger= error
 
     form(action="/auth/login", method="POST")
         .form-group
-            labe(for='email') Email
-            input#email.form-control(name="email", type="text", value=value? value.email : '')
+            labe(for='userName') User name
+            input#userName.form-control(name="userName", type="text", value=value? value.userName : '')
         .form-group
             labe(for='password') Password
             input#password.form-control(name="password", type="password", value=value? value.password : '')
