--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -1,7 +1,7 @@
 extends ../layouts/header.pug
 block header
     
-    h1 Create user
+    h1 Add user
 
     if errors
         each error in errors
@@ -14,6 +14,9 @@ block header
         .form-group
             label(for='phone') Phone
             input#phone.form-control(name="phone", type="text", value=value? value.phone : '')
+        .form-group
+            label(for='password') Password
+            input#password.form-control(name="password", type="password", value=value? value.password : '')
         .form-group
             label(for='avatar') Avatar
             input#avatar.form-control-file(name="avatar", type="file")
