--- a/views/users/index-users-pug.pug
+++ b/views/users/index-users-pug.pug
@@ -20,7 +20,7 @@ block header
                 tr
                     td
                         img(src=user.avatar, width='64')
-                    td= user.name
+                    td= user.userName
                     td= user.phone
                     td
                         a.btn.btn-light(href='/users/'+user.id) View
