--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -9,8 +9,8 @@ block header
 
     form(action="/users/create", method="POST", enctype="multipart/form-data")
         .form-group
-            label(for='name') Name
-            input#name.form-control(name="name", type="text", value=value? value.name : '')
+            label(for='userName') User Name
+            input#userName.form-control(name="userName", type="text", value=value? value.userName : '')
         .form-group
             label(for='phone') Phone
             input#phone.form-control(name="phone", type="text", value=value? value.phone : '')
